# IncrementalGame

./: Cargo.toml  README.md
src/: main.rs
src/modules/: mod.rs  physics.rs  update.rs
src/modules/scenes/: game_screen.rs  intro_screen.rs  load_screen.rs  mod.rs
src/modules/system_interface/: asserts.rs  auto_ui.rs  button.rs  click_ui.rs  dropdown_box.rs  main_menu_ui.rs  mod.rs  options_ui.rs  selection.rs  slider.rs  text_field.rs  widget.rs
