[package]
name = "incremental_game"
version = "0.1.0"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

[dependencies]
maat_graphics = { path = "./Maat-Graphics/" }
maat_input_handler = { path = "./Maat-InputHandler/" }
winit = "0.18.0"
rand = "0.6"

[dependencies.cgmath]
version = "0.17.0"
features = ["swizzle"]
